Fixed overlapping on div menus with a lot of links

--- a/style/style.css
+++ b/style/style.css
@@ -15,23 +15,20 @@ ul {
 }
 
 li {
-    padding-top: 5px;
+    padding-top: 10px;
 }
 
 ul a {
     text-decoration: none;
     color: black;
     background-color: #5e7bae;
-    padding: 5px 5px;
+    padding: 10px 5px;
 }
 
 #title{
-    top: 30%;
-    left: 50%;
+    margin: auto;
+    width: 500px;
     text-align: center;
-    transform: translate(-50%, -50%);
-    margin: 0;
-    position: fixed;
 }
 
 #welcomeMessage {
@@ -47,19 +44,22 @@ ul a {
 
 .center_s {
     margin: 0;
-	position: fixed;
-	top: 60%;
-	left: 55%;
+    text-align: center;
+	position: absolute;
+	top: 40%;
+	left: 50%;
 	transform: translate(-50%, -50%);
-    width: 80%;
+    width: 100%;
+    height: 50%;
 }
 
 .linksBlocks {
-    float: left;
     display: inline-block;
+    width: 200px;
+    flex: left;
     text-align: center;
     padding: 10px 20px;
-    margin: 30px;
+    margin: auto;
 }
 
 .jap_titleBlocks {
